--- a/frontend/public/locales/vn/translation.json
+++ b/frontend/public/locales/vn/translation.json
@@ -88,6 +88,10 @@
     "address": "Địa chỉ",
     "city": "Tỉnh/Thành phố",
     "selected": "Sản phẩm đã chọn",
-    "phone": "Số điện thoại"
+    "phone": "Số điện thoại",
+
+    "newstitle": "Tin tức - Công ty TNHH thiết bị và hóa chất Thành Tín",
+    "newsmenu": "Danh mục tin",
+    "solution": "Giải pháp"
 
 }
