--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -1,11 +1,14 @@
 {
+    "home.label":"Home",
+    "service.label": "Services",
+    "contactnav": "Contact us",
     "intro.label": "About us",
     "signin.label": "Sign in",
     "logout.label": "Log out",
     "pass.label": "Password",
     "category.label": "Categories",
     "news.label": "News",
-    "video.label": "Video channel - New video",
+    "video.label": "Video channel",
     "support.label": "Online Support",
     "productbox.label": "New products",
 
@@ -29,11 +32,13 @@
     "newproduct.label": "New Products",
     "noproduct.label": "No product found",
     "cart.label": "Cart",
-    "emptycart.label": "Cart is empty now. ",
+    "emptycart.label": "Your cart is empty. ",
     "buynow.label": "Shop now",
     "total.label": "Total",
     "productqty.label": "product",
     "submit.label": "Submit",
+    "instock": "In stock",
+    "outofstock": "Out of Stock",
 
     "emailus.label": "Email us",
     "back.label": "Back",
