--- a/frontend/public/locales/vn/translation.json
+++ b/frontend/public/locales/vn/translation.json
@@ -33,7 +33,7 @@
     "tech.label":  "Phòng kỹ thuật",
 
     "title.label":"Sản phẩm theo ứng dụng - CÔNG TY TNHH THIẾT BỊ VÀ HÓA CHẤT THÀNH TÍN",
-    "newproduct.label": "Sản phẩm nổi bật",
+    "newproduct.label": "Sản phẩm mới",
     "noproduct.label": "Không tìm thấy sản phẩm",
     "cart.label": "Giỏ hàng",
     "emptycart.label": "Giỏ hàng đang trống",
