--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -75,6 +75,7 @@
     "allpro.label": "All",
     "search.label": "Search for",
     "result.label": "search results",
+    "relate.product": "Relative Products",
 
     "intro.p1": "operates in the field of consultancy, providing solutions, laboratory equipment, industrial equipment, chemicals in the following field:",
     "intro.l1": " Food and Beverage Solution",
