--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -32,7 +32,7 @@
 
 
     "title.label": "Products - Applications Thanh Tin Instrument And Chemical Co.LTD",
-    "newproduct.label": "New Products",
+    "newproduct.label": "All Products",
     "noproduct.label": "No product found",
     "cart.label": "Cart",
     "emptycart.label": "Your cart is empty. ",
