--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -23,7 +23,7 @@
     "hcmadd.label":"78 1A St, Quater 4, Binh Hung Hoa B Ward, Binh Tan Dist., Ho Chi Minh City, VietNam",
     "phone.label": "Hotline",
     "hn.label": "Ha Noi Office",
-    "hnadd.label": " 3, A1-A2-A3 Area, Cau Thanh Tri St., Cu Khoi Ward, Long Bien Dist., Ha Noi, VietNam",
+    "hnadd.label": "Lot 3, A1-A2-A3 Area, Cau Thanh Tri St., Cu Khoi Ward, Long Bien Dist., Ha Noi, VietNam",
     "mst.label": "Tax:",
     "sale.label": "Sale Department",
     "hcmname.label": "Ho Chi Minh",
