--- a/frontend/public/locales/vn/translation.json
+++ b/frontend/public/locales/vn/translation.json
@@ -25,7 +25,7 @@
     "contact.label": "Thông tin liên hệ",
     "company.label": "Công ty TNHH thiết bị và hóa chất Thành Tín",
     "hcm.label": "VP HCM",
-    "hcmadd.label":"78 đường số 1A, khu phố 4, phường Bình Hưng Hòa 2, quận Bình Tân, TPHCM",
+    "hcmadd.label":"78 đường số 1A, khu phố 4, phường Bình Hưng Hòa B, quận Bình Tân, TPHCM",
     "phone.label": "Điện thoại",
     "hn.label": "VP Hà Nội",
     "hnadd.label": "Lô 3, Khu A1-A2-A3, đường Cầu Thanh Trì, phường Cự Khối, quận Long Biên, Hà Nội",
