change category's applications

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -1,43 +1,43 @@
 {
-    "home.label":"Home",
-    "service.label": "Services",
-    "contactnav": "Contact us",
-    "intro.label": "About us",
-    "signin.label": "Sign in",
-    "logout.label": "Log out",
-    "pass.label": "Password",
-    "category.label": "Categories",
-    "news.label": "News",
-    "news.label1": "Công ty Thành Tín là nhà phân phối chính thức cho dòng cân HE/TLE/HE của hãng METTLER TOLEDO (Thụy Sỹ)",
-    "news.label2": "Thông báo thay đổi tên giao dịch",
-    "news.label3": "ANALYTICA VIETNAM 2013 triển lãm quốc tế lần thứ 3 về công nghệ thí nghiệm,...",
-    "news.label4": "Tuyển nhân viên kinh doanh",
-    "video.label": "Video channel",
-    "support.label": "Online Support",
+    "Home":"Home",
+    "Services": "Services",
+    "Contact us": "Contact us",
+    "About us": "About us",
+    "Sign in": "Sign in",
+    "Log out": "Log out",
+    "Password": "Password",
+    "Categories": "Categories",
+    "News": "News",
+    "news.label1": "Công ty Thành Tín là nhà phân ph?i chính th?c cho dòng cân HE/TLE/HE c?a hãng METTLER TOLEDO (Th?y S?)",
+    "news.label2": "Thông báo thay d?i tên giao d?ch",
+    "news.label3": "ANALYTICA VIETNAM 2013 tri?n lãm qu?c t? l?n th? 3 v? công ngh? thí nghi?m,...",
+    "news.label4": "Tuy?n nhân viên kinh doanh",
+    "Video channel": "Video channel",
+    "Online Support": "Online Support",
     "productbox.label": "New products",
     "cutname": "{{product.enname}}",
     "cartname": "{{item.enname}}",
     "productbrand": "{{product.brand}}",
     "switchcategory": "{{val.encategory}}",
 
-    "collectemail.label": "Enter email to receive latest news from us",
-    "send.label":"Send",
-    "contact.label": "Contact Information",
-    "company.label": "Thanh Tin Instrument And Chemical Co.LTD",
-    "hcm.label": "Ho Chi Minh Office",
-    "hcmadd.label":"78 1A St, Quater 4, Binh Hung Hoa B Ward, Binh Tan Dist., Ho Chi Minh City, VietNam",
-    "phone.label": "Hotline",
-    "hn.label": "Ha Noi Office",
-    "hnadd.label": "Lot 3, A1-A2-A3 Area, Cau Thanh Tri St., Cu Khoi Ward, Long Bien Dist., Ha Noi, VietNam",
-    "mst.label": "Tax:",
-    "sale.label": "Sale Department",
-    "hcmname.label": "Ho Chi Minh",
-    "hnname.label": "Ha Noi",
-    "tech.label":  "Technical Department",
+    "Enter email to receive latest news from us": "Enter email to receive latest news from us",
+    "Send":"Send",
+    "Contact Information": "Contact Information",
+    "Thanh Tin Instrument And Chemical Co.LTD": "Thanh Tin Instrument And Chemical Co.LTD",
+    "VP HCM": "Ho Chi Minh Office",
+    "78 1A St, Quater 4, Binh Hung Hoa B Ward, Binh Tan Dist., Ho Chi Minh City, VietNam":"78 1A St, Quater 4, Binh Hung Hoa B Ward, Binh Tan Dist., Ho Chi Minh City, VietNam",
+    "Hotline": "Hotline",
+    "Ha Noi Office": "Ha Noi Office",
+    "Lot 3, A1-A2-A3 Area, Cau Thanh Tri St., Cu Khoi Ward, Long Bien Dist., Ha Noi, VietNam": "Lot 3, A1-A2-A3 Area, Cau Thanh Tri St., Cu Khoi Ward, Long Bien Dist., Ha Noi, VietNam",
+    "MST": "Tax:",
+    "Sale Department": "Sale Department",
+    "HCM": "Ho Chi Minh",
+    "Ha Noi": "Ha Noi",
+    "Technical Department":  "Technical Department",
 
 
-    "title.label": "Products - Applications Thanh Tin Instrument And Chemical Co.LTD",
-    "newproduct.label": "All Products",
+    "Products - Applications Thanh Tin Instrument And Chemical Co.LTD": "Products - Applications Thanh Tin Instrument And Chemical Co.LTD",
+    "All Products": "All Products",
     "noproduct.label": "No product found",
     "cart.label": "Cart",
     "emptycart.label": "Your cart is empty. ",
@@ -112,7 +112,12 @@
 
     "newstitle": "News - Thanh Tin Tech Instrument And Chemical Co.LTD",
     "newsmenu": "News Menu",
-    "solution": "Solutions"
+    "solution": "Solutions",
+    "Business code": "Business code",
+    "0311941553 first issued by Ho Chi Minh Authority For Planning And Investment in 22/08/2012": "0311941553 first issued by Ho Chi Minh Authority For Planning And Investment in 22/08/2012",
+    "title": "{{application.entitle}}",
+    "content": "{{application.encontent}}",
+    "switchtype": "{{val.enarticletype}}"
     
 
 }
