fix category - them phan nhap du lieu

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -58,6 +58,9 @@
     "qty.label": "Quantity",
     "parameter.label": "Parameter",
     "parameter.content": "{{product.enparameter}}",
+    "specification.content": "{{product.enspecification}}",
+    "apply.content": "{{product.enapply}}",
+    "accessories.content": "{{product.enaccessories}}",
     "key": "{{product.endescription}}",
     "feature.label": "Features",
     "access.label": "Accessories",
