--- a/frontend/public/locales/vn/translation.json
+++ b/frontend/public/locales/vn/translation.json
@@ -57,6 +57,9 @@
     "qty.label": "Số lượng",
     "parameter.label": "Thông số kỹ thuật",
     "parameter.content": "{{product.parameter}}",
+    "apply.content": "{{product.apply}}",
+    "specification.content": "{{product.specification}}",
+    "accessories.content": "{{product.accessories}}",
     "key": "{{product.description}}",
     "feature.label": "Đặc tính nổi bật",
     "access.label": "Phụ kiện",
